# rinx

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  bochsrc  makefile  x86-rnix_os.json
.cargo/: config.toml
.run/: build_master.img.run.xml  clean.run.xml  qemu.run.xml  rnix.run.xml
boot/: boot.asm  loader.asm
src/: README.md  boot.asm  bx_enh_dbg.ini  entry.asm  gdt.rs  linker.ld  loader.asm  main.rs  makefile  vga_buffer.rs
src/boot/: boot.asm  loader.asm
src/console/: cell.rs  color.rs  console.rs  mod.rs  text_buffet.rs
src/drivers/: keyboard.rs  mod.rs
src/drivers/gpu/: color.rs  mod.rs  vga_buffer.rs  vga_driver.rs  vga_new.rs
src/kernel/: gdt.rs  global.rs  logger.rs  mod.rs  time.rs
src/kernel/interrupts/: clock.rs  entry.rs  handler.rs  handler_entry.rs  idt.rs  mod.rs
src/kernel/interrupts/pic/: controller.rs  handler.rs  mod.rs  pic_controller.rs
src/kernel/sync/: mutex.rs
src/kernel/system_call/: gate.rs  mod.rs  print.rs  sys_call.rs
src/kernel/task/: mod.rs
src/kernel/tasks/: mod.rs  task.rs
src/kernel/tasks/thread/: idle.rs  init.rs  mod.rs  test.rs  test2.rs
src/libs/: circular_queue.rs  kernel_linked_list.rs  mod.rs
src/mm/: allocator.rs  detected.rs  heap_allocator.rs  mod.rs  page.rs  physical_memory.rs
