[package]
name = "rnix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csi_parser = { version = "0.1.2", default-features = false, features = ["no_std"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
log = "0.4.19"
spin = "0.9.8"
volatile = "0.4.6"
x86 = "0.52.0"
